added put, delete, and validation
